shared_ping_log/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-ping-log-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-ping-log
  template:
    metadata:
      labels:
        app: shared-ping-log
    spec:
      # volumes:
      #   - name: shared-ping-log
      #     persistentVolumeClaim:
      #       claimName: shared-ping-log-claim
      containers:
        - name: ping-pong
          image: javiercoronadonarvaez/ping-pong:v1.2.0
          # volumeMounts:
          #   - name: shared-ping-log
          #     mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: log-output
          image: javiercoronadonarvaez/log-output:v1.2.0
          # volumeMounts:
          #   - name: shared-ping-log
          #     mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
